--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/search.js"></script>
         <script src="scripts/services/searchresults.js"></script>
+        <script src="scripts/controllers/statuschart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
