--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/highcharts-release/highcharts.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
