--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-right navbar-nav">
+              <li id="navbarSearch"><button type="button" class="btn btn-primary btn-sm" onclick="location.href='#/search'">Search!</button>
               <li><a href="http://richardpeng.io">by Richard Peng</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
